--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "bankai": "^9.15.0",
     "choo": "^6.13.3",
     "choo-devtools": "^2.5.1",
-    "xhr": "^2.5.0"
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "request": "^2.88.0",
+    "xhr": "^2.5.0",
+    "xml2json": "^0.11.2"
   }
 }
